tests/baselines/reference/privateInstanceMemberAccessibility(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
privateInstanceMemberAccessibility.ts(5,7): error TS2415: Class 'Derived' incorrectly extends base class 'Base'.
  Property 'foo' is private in type 'Base' but not in type 'Derived'.
privateInstanceMemberAccessibility.ts(6,15): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
privateInstanceMemberAccessibility.ts(8,22): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
privateInstanceMemberAccessibility.ts(10,15): error TS2304: Cannot find name 'super'.
privateInstanceMemberAccessibility.ts(12,12): error TS1442: Expected '=' for property initializer.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== privateInstanceMemberAccessibility.ts (5 errors) ====
    class Base {
        private foo: string;
    }
    
    class Derived extends Base {
          ~~~~~~~
!!! error TS2415: Class 'Derived' incorrectly extends base class 'Base'.
!!! error TS2415:   Property 'foo' is private in type 'Base' but not in type 'Derived'.
        x = super.foo; // error
                  ~~~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
        y() {
            return super.foo; // error
                         ~~~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
        }
        z: typeof super.foo; // error
                  ~~~~~
!!! error TS2304: Cannot find name 'super'.
    
        a: this.foo; // error
               ~
!!! error TS1442: Expected '=' for property initializer.
    }